--- a/about.html
+++ b/about.html
@@ -3,234 +3,248 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Book Hub</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>About Us - Book Hub</title>
   <style>
-    :root {
-      --bg-light: linear-gradient(-45deg, #d4fc79, #96e6a1, #84fab0, #8fd3f4);
-      --bg-dark: linear-gradient(-45deg, #0f2027, #203a43, #2c5364, #1c1c2e);
-      --text-light: #333;
-      --text-dark: #fff;
+    :root{
+      /* keep your original look as the LIGHT theme */
+      --bg-light: linear-gradient(135deg, #4e54c8, #8f94fb);
+      --text-light: #ffffff;
+
+      /* calm DARK theme for readability */
+      --bg-dark: linear-gradient(135deg, #0f172a, #111827);
+      --text-dark: #e5e7eb;
     }
 
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background: var(--bg-light);
-      background-size: 400% 400%;
-      animation: gradientBG 12s ease infinite;
       color: var(--text-light);
-      line-height: 1.6;
-      transition: background 0.5s, color 0.5s;
+      transition: background 0.4s ease, color 0.4s ease;
     }
-
+    /* Dark mode class (the only thing the button flips) */
     body.dark-mode {
       background: var(--bg-dark);
       color: var(--text-dark);
     }
 
-    @keyframes gradientBG {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
+    /* Topbar (unchanged visually, just slight tuning for both modes) */
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 25px;
+      background: rgba(0,0,0,0.4);
     }
+    body.dark-mode .topbar { background: rgba(0,0,0,0.55); }
 
-    .nav-top { text-align: right; padding: 10px; }
-    .nav-top a {
-      text-decoration: none; padding: 8px 15px; border-radius: 8px;
-      background: #2e7d32; color: #fff; font-weight: bold; transition: background 0.3s;
-    }
-    .nav-top a:hover { background: #1b5e20; }
-
-    header { text-align: center; padding: 50px 20px; }
-    header h1 { font-size: 3rem; color: #2e7d32; margin-bottom: 10px; text-shadow: 0 0 10px rgba(0,0,0,0.3); }
-    header p { font-size: 1.2rem; color: inherit; }
-
-    .toggle-buttons { margin: 15px; text-align: center; }
-    .toggle-buttons button {
-      margin: 0 8px;
+    .left-controls button {
+      margin-right: 8px;
       padding: 8px 14px;
       border-radius: 8px;
       border: none;
       cursor: pointer;
       font-weight: bold;
+      background: #ff9800;
+      color: white;
       transition: 0.3s;
     }
-    .toggle-buttons button:hover { opacity: 0.8; }
+    .left-controls button:hover { opacity: 0.8; }
 
-    .container {
-      max-width: 1000px;
+    .right-nav a {
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 8px;
+      background: rgba(255,255,255,0.2);
+      color: #fff;
+      transition: 0.3s;
+    }
+    .right-nav a:hover { background: #ff9800; color: #fff; }
+    body.dark-mode .right-nav a { background: rgba(255,255,255,0.08); }
+
+    /* Hero Section */
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 15px;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      font-weight: 500;
+      max-width: 800px;
       margin: auto;
-      padding: 40px;
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 15px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
     }
 
-    h2 { margin-top: 40px; color: #1565c0; text-align: center; }
+    /* Image Row */
+    .images {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px 0;
+    }
+    .images img {
+      width: 120px;
+      height: 120px;
+      border-radius: 12px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.4);
+    }
 
+    /* Section */
+    .section {
+      text-align: center;
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 15px;
+      color: #ffeb3b;
+    }
+    .section p {
+      font-size: 1.1rem;
+      line-height: 1.7;
+    }
+
+    /* Team Section */
     .team {
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
-      margin-top: 20px;
       gap: 20px;
+      flex-wrap: wrap;
+      margin: 50px auto;
+      max-width: 1000px;
     }
     .member {
-      background: #f1f8e9;
-      border-radius: 15px;
+      background: rgba(0,0,0,0.3);
       padding: 20px;
-      width: 240px;
+      border-radius: 12px;
       text-align: center;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-      transition: transform 0.3s, box-shadow 0.3s;
+      width: 250px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.4);
     }
-    .member:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 0 20px #2e7d32;
+    body.dark-mode .member { background: rgba(255,255,255,0.08); }
+    .member h3 {
+      margin-bottom: 10px;
+      color: #ff9800;
     }
-    .member h3 { margin: 10px 0 5px; color: #2e7d32; }
-    .member p { margin: 0; font-size: 0.95rem; color: #555; }
-
-    .socials { margin-top: 12px; }
-    .socials a {
-      margin: 0 8px;
-      font-size: 1.3rem;
-      text-decoration: none;
-      color: #1565c0;
-      transition: color 0.3s;
-    }
-    .socials a:hover { color: #ff5722; }
-
-    .quote {
-      text-align: center;
-      font-style: italic;
-      color: #ff5722;
-      margin: 40px auto;
-      font-size: 1.3rem;
-    }
-
-    .journey { margin-top: 50px; text-align: center; }
-    .journey ul {
-      list-style: none;
-      padding: 0;
-      max-width: 700px;
-      margin: auto;
-    }
-    .journey li {
-      background: rgba(0,0,0,0.05);
-      margin: 12px 0;
-      padding: 12px 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    .member p {
+      font-size: 0.95rem;
     }
 
     footer {
       text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-      background: rgba(0,0,0,0.1);
+      padding: 15px;
+      background: rgba(0,0,0,0.5);
       font-size: 0.9rem;
-      color: inherit;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
-  <div class="nav-top">
-    <a href="index.html" data-en="🏠 Home">🏠 होम</a>
-    <a href="summaries.html" data-en="📖 Summaries">📖 सारांश</a>
+  <!-- Topbar -->
+  <div class="topbar">
+    <div class="left-controls">
+      <button id="langToggle">🌐 हिंदी</button>
+      <button id="modeToggle">🌓 Dark/Light</button>
+    </div>
+    <nav class="right-nav">
+      <a href="index.html" data-en="🏠 Home">🏠 Home</a>
+      <a href="summaries.html" data-en="📖 Summaries">📖 Summaries</a>
+      <a href="about.html" data-en="ℹ️ About Us">ℹ️ About Us</a>
+    </nav>
   </div>
 
-  <div class="toggle-buttons">
-    <button id="langToggle">🌐 भाषा</button>
-    <button id="modeToggle">🌓 Dark/Light</button>
+  <!-- Hero -->
+  <div class="hero">
+    <h1 data-en="About Book Hub">About Book Hub</h1>
+    <p data-en="Books are more than pages – they are windows to wisdom, and at Book Hub, we open those windows for readers across the world.">Books are more than pages – they are windows to wisdom, and at Book Hub, we open those windows for readers across the world.</p>
   </div>
 
-  <header>
-    <h1 data-en="About Us">हमारे बारे में</h1>
-    <p data-en="We are students on a mission to make knowledge simple, accessible, and inspiring for everyone.">
-      हम विद्यार्थी हैं जो ज्ञान को सरल, सुलभ और प्रेरणादायक बनाने के मिशन पर हैं।
-    </p>
-  </header>
+  <!-- Images -->
+  <div class="images">
+    <img src="https://img.icons8.com/color/96/books.png" alt="Books">
+    <img src="https://img.icons8.com/color/96/open-book--v2.png" alt="Open Book">
+    <img src="https://img.icons8.com/color/96/reading.png" alt="Reading">
+  </div>
 
-  <div class="container">
-    <div class="quote" data-en="“Books are not just stories, they are bridges to infinite worlds.”">
-      “किताबें सिर्फ कहानियाँ नहीं हैं, ये अनंत दुनियाओं के सेतु हैं।” 
+  <!-- Sections -->
+  <div class="section">
+    <h2 data-en="Our Mission">Our Mission</h2>
+    <p data-en="To inspire young minds with powerful book summaries, spark curiosity, and build a culture where knowledge is shared, respected, and loved.">To inspire young minds with powerful book summaries, spark curiosity, and build a culture where knowledge is shared, respected, and loved.</p>
+  </div>
+
+  <div class="section">
+    <h2 data-en="Why Readers Love Us">Why Readers Love Us</h2>
+    <p data-en="We deliver concise, clear, and engaging summaries. For every reader, Book Hub is not just a website, but a companion on their journey to wisdom.">We deliver concise, clear, and engaging summaries. For every reader, Book Hub is not just a website, but a companion on their journey to wisdom.</p>
+  </div>
+
+  <!-- Team -->
+  <div class="team">
+    <div class="member">
+      <h3>Piyush</h3>
+      <p>The Visionary – creative thinker and driving force behind Book Hub.</p>
     </div>
-
-    <h2 data-en="🎯 Our Mission">🎯 हमारा मिशन</h2>
-    <p style="text-align:center;" data-en="We aim to share wisdom from books in bite-sized, engaging summaries that save time, inspire action, and help students and readers build lifelong learning habits.">
-      हमारा लक्ष्य है कि हम किताबों से ज्ञान को छोटे, रोचक सारांशों के माध्यम से साझा करें जो समय बचाएँ, प्रेरणा दें और छात्रों तथा पाठकों को जीवन भर सीखने की आदत बनाने में मदद करें।
-    </p>
-
-    <h2 data-en="🌟 Our Team">🌟 हमारी टीम</h2>
-    <div class="team">
-      <div class="member">
-        <h3 data-en="Piyush">पियूष</h3>
-        <p data-en="The Explorer – always curious, turning ideas into creative sparks.">अन्वेषक – हमेशा जिज्ञासु, विचारों को रचनात्मक ऊर्जा में बदलना।</p>
-        <div class="socials">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-      <div class="member">
-        <h3 data-en="Prince">प्रिंस</h3>
-        <p data-en="The Strategist – shaping our vision and giving direction to our journey.">रणनीतिकार – हमारी दृष्टि को आकार देना और यात्रा को दिशा देना।</p>
-        <div class="socials">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-      <div class="member">
-        <h3 data-en="Deepak">दीपक</h3>
-        <p data-en="The Problem Solver – bringing innovative and practical solutions to life.">समस्या समाधानकर्ता – अभिनव और व्यावहारिक समाधान लाना।</p>
-        <div class="socials">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
+    <div class="member">
+      <h3>Prince</h3>
+      <p>The Innovator – bringing smart ideas and shaping user-friendly designs.</p>
     </div>
-
-    <h2 data-en="📜 Our Journey">📜 हमारी यात्रा</h2>
-    <div class="journey">
-      <ul>
-        <li data-en="Started as curious students seeking knowledge.">जिज्ञासु छात्र के रूप में ज्ञान की खोज शुरू की।</li>
-        <li data-en="Created Book Hub to simplify learning for everyone.">सभी के लिए सीखने को सरल बनाने के लिए बुक हब बनाया।</li>
-        <li data-en="Shared hundreds of summaries and insights online.">सैकड़ों सारांश और अंतर्दृष्टियाँ ऑनलाइन साझा की।</li>
-        <li data-en="Continuously improving and growing the platform.">लगातार प्लेटफ़ॉर्म को सुधारते और बढ़ाते रहना।</li>
-      </ul>
+    <div class="member">
+      <h3>Deepak</h3>
+      <p>The Strategist – detail-oriented, ensuring quality and excellence in every part.</p>
     </div>
   </div>
 
   <footer>
-    <p data-en="✨ Created with passion by Piyush, Prince & Deepak ✨">✨ पियूष, प्रिंस और दीपक द्वारा प्यार और मेहनत से बनाया गया ✨</p>
+    © 2025 Book Hub | Built with passion for readers
   </footer>
 
   <script>
-    // Dark/Light Mode
+    // ---------- Language toggle (unchanged) ----------
+    const langBtn = document.getElementById("langToggle");
+    const elements = document.querySelectorAll("[data-en]");
+    let hindi = false;
+
+    const translations = {
+      "About Book Hub": "बुक हब के बारे में",
+      "Books are more than pages – they are windows to wisdom, and at Book Hub, we open those windows for readers across the world.":
+        "किताबें सिर्फ पन्ने नहीं हैं – वे ज्ञान की खिड़कियाँ हैं, और बुक हब में हम दुनिया भर के पाठकों के लिए इन खिड़कियों को खोलते हैं।",
+      "Our Mission": "हमारा मिशन",
+      "To inspire young minds with powerful book summaries, spark curiosity, and build a culture where knowledge is shared, respected, and loved.":
+        "युवा दिमागों को प्रेरित करना, जिज्ञासा जगाना और ऐसा वातावरण बनाना जहाँ ज्ञान साझा किया जाए, सम्मानित हो और प्रिय बने।",
+      "Why Readers Love Us": "पाठक हमें क्यों पसंद करते हैं",
+      "We deliver concise, clear, and engaging summaries. For every reader, Book Hub is not just a website, but a companion on their journey to wisdom.":
+        "हम संक्षिप्त, स्पष्ट और रोचक सारांश प्रस्तुत करते हैं। हर पाठक के लिए, बुक हब केवल एक वेबसाइट नहीं बल्कि ज्ञान की यात्रा में साथी है।"
+    };
+
+    langBtn.addEventListener("click", () => {
+      hindi = !hindi;
+      elements.forEach(el => {
+        if (hindi) {
+          el.innerText = translations[el.dataset.en] || el.dataset.en;
+        } else {
+          el.innerText = el.dataset.en;
+        }
+      });
+      langBtn.innerText = hindi ? "🌐 English" : "🌐 हिंदी";
+    });
+
+    // ---------- Dark/Light toggle (fixed & persistent) ----------
     const modeBtn = document.getElementById("modeToggle");
+
+    // apply saved preference on load
+    if (localStorage.getItem("darkMode") === "true") {
+      document.body.classList.add("dark-mode");
+    }
+
     modeBtn.addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
       localStorage.setItem("darkMode", document.body.classList.contains("dark-mode"));
-    });
-    if(localStorage.getItem("darkMode") === "true"){ document.body.classList.add("dark-mode"); }
-
-    // Hindi Language Toggle
-    const langBtn = document.getElementById("langToggle");
-    langBtn.addEventListener("click", () => {
-      const texts = document.querySelectorAll("[data-en]");
-      texts.forEach(el => {
-        if(el.dataset.active === "hi"){
-          el.innerText = el.dataset.en;
-          el.dataset.active = "en";
-        } else {
-          el.innerText = el.dataset.hi || el.innerText;
-          el.dataset.active = "hi";
-        }
-      });
     });
   </script>
 </body>
