--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,8 +38,26 @@
     header h1 { font-size: 2.5rem; margin: 0; }
     header p { font-size: 1.2rem; }
 
-    nav { text-align: center; margin-top: 10px; }
-    nav a, nav button {
+    /* 🔹 Topbar styling */
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+    }
+
+    .left-controls button {
+      margin-right: 8px;
+      padding: 8px 14px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .left-controls button:hover { opacity: 0.8; }
+
+    .right-nav a {
       text-decoration: none;
       margin: 0 10px;
       font-weight: bold;
@@ -49,22 +66,8 @@
       background: rgba(0,0,0,0.3);
       color: inherit;
       transition: 0.3s;
-      border: none;
-      cursor: pointer;
     }
-    nav a:hover, nav button:hover { background: #ff9800; color: #fff; }
-
-    .toggle-buttons { margin: 15px; text-align: center; }
-    .toggle-buttons button {
-      margin: 0 8px;
-      padding: 8px 14px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .toggle-buttons button:hover { opacity: 0.8; }
+    .right-nav a:hover { background: #ff9800; color: #fff; }
 
     .gallery {
       display: grid;
@@ -172,21 +175,23 @@
 </head>
 <body>
   <header>
+    <!-- 🔹 Topbar with buttons (left) & nav (right) -->
+    <div class="topbar">
+      <div class="left-controls">
+        <button id="langToggle">🌐 हिंदी</button>
+        <button id="modeToggle">🌓 Dark/Light</button>
+      </div>
+      <nav class="right-nav">
+              <a href="summaries.html" data-en="📖 Summaries">📖 Summaries</a>
+        <a href="about.html" data-en="ℹ️ About Us">ℹ️ About Us</a>
+      </nav>
+    </div>
+
     <h1 data-en="📚 Welcome to Book Hub">📚 Welcome to Book Hub</h1>
-    <p data-en="Explore life-changing books with short and meaningful summaries">Explore life-changing books with short and meaningful summaries</p>
+    <p data-en="Explore life-changing books with short and meaningful summaries">
+      Explore life-changing books with short and meaningful summaries
+    </p>
   </header>
-
-  <nav>
-    <a href="index.html" data-en="🏠 Home">🏠 Home</a>
-    <a href="summaries.html" data-en="📖 Summaries">📖 Summaries</a>
-    <a href="about.html" data-en="ℹ️ About Us">ℹ️ About Us</a>
-    <button id="logoutBtn">🚪 Logout</button>
-  </nav>
-
-  <div class="toggle-buttons">
-    <button id="langToggle">🌐 हिंदी</button>
-    <button id="modeToggle">🌓 Dark/Light</button>
-  </div>
 
   <section class="gallery">
     <div class="book-card">
@@ -291,10 +296,10 @@
       const elements = document.querySelectorAll("[data-en]");
       elements.forEach(el => {
         if(!el.dataset.hi) {
+          // Hindi translations
           el.dataset.hi = el.dataset.en === "📚 Welcome to Book Hub" ? "📚 बुक हब में आपका स्वागत है" :
                          el.dataset.en === "Explore life-changing books with short and meaningful summaries" ? "संक्षिप्त और सार्थक सारांश के साथ जीवन बदलने वाली किताबें खोजें" :
-                         el.dataset.en === "🏠 Home" ? "🏠 होम" :
-                         el.dataset.en === "📖 Summaries" ? "📖 सारांश" :
+                                                 el.dataset.en === "📖 Summaries" ? "📖 सारांश" :
                          el.dataset.en === "ℹ️ About Us" ? "ℹ️ हमारे बारे में" :
                          el.dataset.en === "Discover your purpose with the Japanese secret to a long and happy life." ? "जापानी रहस्य के साथ अपना उद्देश्य खोजें और लंबा खुशहाल जीवन पाएं।" :
                          el.dataset.en === "Learn how small habits build massive success in life." ? "जानें कि कैसे छोटे आदतें जीवन में बड़ी सफलता बनाती हैं।" :
@@ -316,14 +321,6 @@
         }
         el.innerText = el.innerText === el.dataset.en ? el.dataset.hi : el.dataset.en;
       });
-    });
-
-    // Logout Function
-    const logoutBtn = document.getElementById("logoutBtn");
-    logoutBtn.addEventListener("click", () => {
-      localStorage.clear();
-      alert("You have been logged out!");
-      window.location.href = "login.html"; // apna login page ka naam yaha likho
     });
   </script>
 </body>
