--- a/about.html
+++ b/about.html
@@ -147,7 +147,15 @@
       <h1 data-en="About Book Hub" class="text-5xl md:text-7xl font-bold text-white mb-6">About Book Hub</h1>
       <p data-en="Books are more than pages – they are windows to wisdom, and at Book Hub, we open those windows for readers across the world." class="text-xl md:text-2xl text-white mb-8">
         Books are more than pages – they are windows to wisdom, and at Book Hub, we open those windows for readers across the world.
-      </p>
+      </p><!-- ✅ Added Hyperlinks -->
+<div class="flex justify-center space-x-6 mt-6">
+  <a href="index.html" class="px-6 py-3 bg-indigo-600 text-white rounded-full font-medium transition-all hover:scale-105 hover:bg-indigo-800">
+    Go to Home
+  </a>
+  <a href="summaries.html" class="px-6 py-3 bg-yellow-300 text-black rounded-full font-medium transition-all hover:scale-105 hover:bg-yellow-500 hover:text-white">
+    View Summaries
+  </a>
+</div>
       <div class="flex justify-center space-x-8 mb-8">
         <div class="animate-float">
           <img src="https://img.icons8.com/color/96/books.png" alt="Colorful stack of books" class="w-16 h-16 md:w-20 md:h-20">
@@ -327,3 +335,4 @@
   </script>
 </body>
 </html>
+
