--- a/about.html
+++ b/about.html
@@ -109,12 +109,15 @@
             <span class="inline-block">🌓</span>
           </button>
         </div>
-        <div class="hidden md:flex space-x-3">
-          <a href="index.html" data-en="Home" class="ripple-btn px-6 py-2 text-white dark:text-white bg-black dark:bg-white dark:text-black bg-opacity-10 dark:bg-opacity-20 rounded-full font-medium transition-all hover:bg-opacity-20 hover:scale-105">Home</a>
-          <a href="summaries.html" data-en="Summaries" class="ripple-btn px-6 py-2 text-white dark:text-white bg-black dark:bg-white dark:text-black bg-opacity-10 dark:bg-opacity-20 rounded-full font-medium transition-all hover:bg-opacity-20 hover:scale-105">Summaries</a>
-          <a href="about.html" data-en="About" class="ripple-btn px-6 py-2 text-white dark:text-white bg-black dark:bg-white dark:text-black bg-opacity-10 dark:bg-opacity-30 rounded-full font-medium transition-all hover:bg-opacity-30 hover:scale-105">About</a>
-        </div>
-      </div>
+       <div class="hidden md:flex space-x-3">
+  <a href="index.html" class="ripple-btn px-6 py-2 text-white dark:text-white bg-black dark:bg-black dark:text-black bg-opacity-10 dark:bg-opacity-20 rounded-full font-medium transition-all hover:bg-opacity-20 hover:scale-105">Home</a>
+  <a href="summaries.html" class="ripple-btn px-6 py-2 text-white dark:text-white bg-black dark:bg-black dark:text-black bg-opacity-10 dark:bg-opacity-20 rounded-full font-medium transition-all hover:bg-opacity-20 hover:scale-105">Summaries</a>
+  <a href="about.html" class="ripple-btn px-6 py-2 text-white dark:text-white bg-black dark:bg-black dark:text-black bg-opacity-10 dark:bg-opacity-20 rounded-full font-medium transition-all hover:bg-opacity-20 hover:scale-105">About</a>
+  
+  <!-- 👇 नया Logout Button यहीं डाला -->
+  <a href="login.html" onclick="logout()" class="px-6 py-2 bg-red-500 text-white rounded-full hover:bg-red-600 transition">Logout</a>
+</div>
+
     </div>
   </nav>
 
@@ -344,5 +347,6 @@
   </script>
 </body>
 </html>
+
 
 
