--- a/about.html
+++ b/about.html
@@ -148,15 +148,18 @@
         Books are more than pages – they are windows to wisdom, and at Book Hub, we open those windows for readers across the world.
       </p><!-- ✅ Buttons to go back -->
 <div class="flex justify-center space-x-6 mt-6">
+<nav class="right-nav">
   <a href="index.html" class="px-6 py-3 bg-indigo-600 text-white rounded-full font-medium transition-all hover:scale-105 hover:bg-indigo-800">
     Go to Home
   </a>
+
   <a href="summaries.html" class="px-6 py-3 bg-yellow-300 text-black rounded-full font-medium transition-all hover:scale-105 hover:bg-yellow-500 hover:text-white">
     View Summaries
   </a>
+ </nav>
 </div>
 
-      <div class="flex justify-center space-x-8 mb-8">
+    <div class="flex justify-center space-x-8 mb-8">
         <div class="animate-float">
           <img src="https://img.icons8.com/color/96/books.png" alt="Colorful stack of books" class="w-16 h-16 md:w-20 md:h-20">
         </div>
@@ -335,6 +338,7 @@
   </script>
 </body>
 </html>
+
 
 
 
